--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ helpdesk_incident_analysis.csv
 helpdesk_incident_train_data.csv
 incidents_servicedesk.csv
 incidents_servicedesk_large.csv
+catalog_items.csv
